--- a/public/sass/color.sass
+++ b/public/sass/color.sass
@@ -1,6 +1,7 @@
 $dark-navy-blue: #000b28
 $lightish-blue: #495aff
 $pinkish-grey: #c4c4c4
+$pinkish-grey-54: rgba(rgb(196,196,196), .54)
 $greyish-brown: #5a5a5a
 $red: #ea0000
 $white: #ffffff
