--- a/public/sass/entries/realty.sass
+++ b/public/sass/entries/realty.sass
@@ -42,12 +42,15 @@ div.realty-title
 
 .realty-favorite, .realty-counter, .realty-date
     color: $warm-grey
-    height: 27px
-    line-height: 27px
+    height: 28px
+    line-height: 28px
 
 .realty-favorite
     margin-bottom: 10px
     cursor: pointer
+
+.realty-favorite i
+    font-size: 18px
 
 .realty-favorite:hover span
     border: 0
