--- a/public/sass/header.sass
+++ b/public/sass/header.sass
@@ -2,15 +2,15 @@
     background: $dark-navy-blue
     width: 100%
 
+.header-top-wrap
+    background: $black
+
 .header-top-wrap > div:not(.city-question-popup)
     padding: 0 60px
     line-height: 68px
     vertical-align: middle
     color: $white-two
     font-size: 13px
-
-.header-top-wrap .lh-icon
-    font-size: 18px
 
 .current-city-wrap
     cursor: pointer
