--- a/public/sass/icons.sass
+++ b/public/sass/icons.sass
@@ -17,6 +17,9 @@
     -webkit-font-smoothing: antialiased
     -moz-osx-font-smoothing: grayscale
     vertical-align: middle
+    font-size: 18px
+    margin-top: -2px
+    display: inline-block
 
 .lh-icon-cross:before
     content: "\e90e"
