--- a/public/sass/form.sass
+++ b/public/sass/form.sass
@@ -57,16 +57,17 @@ textarea.form-control
     display: inline-block
     font-family: 'libhouse-icons'
     text-align: center
-    width: 17px
-    height: 17px
+    width: 18px
+    height: 18px
     color: $toxic-green
     transition: .1s
-    border: 1px solid #c4c4c4
+    border: 2px solid $pinkish-grey-54
     font-size: 0
     line-height: 16px
     vertical-align: middle
     margin-right: 10px
     margin-top: -2px
+    @include border-radius(2px)
 
 .checkbox:checked + label:before
     border-color: $toxic-green
@@ -170,22 +171,24 @@ label span
 
 .radio + label:before
     content: ''
-    width: 14.5px
-    height: 14.5px
+    width: 18px
+    height: 18px
     display: inline-block
     margin-right: 10px
     vertical-align: middle
-    margin-top: -2.5px
+    margin-top: -2px
     transition: 0.2s
     @include border-radius(50%)
 
 .radio + label:before
     border: 1.5px solid $pinkish-grey
-    @include gradient((circle closest-side, $pinkish-grey 2.8px, $white 3.8px))
+
+.radio + label:hover:before
+    border-color: $lightish-blue
 
 .radio:checked + label:before
-    border: 1.5px solid $lightish-blue
-    @include gradient((circle closest-side, $lightish-blue 2.8px, $white 3.8px))
+    border-color: $lightish-blue
+    @include gradient((circle closest-side, $lightish-blue 4px, $white 5px))
 
 .radio + label
     line-height: 20px
@@ -353,24 +356,3 @@ h1 + form.realty-create-form
     line-height: 20px
     color: $greyish-brown
     padding: 0 18px
-
-
-.popover.tooltip_err
-    max-width: 300px !important
-    padding: 20px 30px !important
-    background: $red
-    @include border-radius(4px !important)
-    box-shadow: 2px 2px 10px 0 rgba(0, 0, 0, 0.25)
-    line-height: 20px
-
-.popover.tooltip_err .popover-body
-    color: $white
-
-.popover.tooltip_err .arrow
-    display: block !important
-
-.popover.tooltip_err .arrow:after
-    border-right-color: $red
-
-.form-inline-table .d-table-cell:not(:first-child)
-    padding-left: 20px
