--- a/public/sass/icons.sass
+++ b/public/sass/icons.sass
@@ -1,7 +1,7 @@
 @font-face
     font-family: 'libhouse-icons'
-    src:  url('../fonts/libhouse-icons.eot?lpzgnu')
-    src:  url('../fonts/libhouse-icons.eot?lpzgnu#iefix') format('embedded-opentype'), url('../fonts/libhouse-icons.ttf?lpzgnu') format('truetype'), url('../fonts/libhouse-icons.woff?lpzgnu') format('woff'), url('../fonts/libhouse-icons.svg?lpzgnu#libhouse-icons') format('svg')
+    src:  url('../fonts/libhouse-icons.eot?lpzgnq')
+    src:  url('../fonts/libhouse-icons.eot?lpzgnq#iefix') format('embedded-opentype'), url('../fonts/libhouse-icons.ttf?lpzgnq') format('truetype'), url('../fonts/libhouse-icons.woff?lpzgnq') format('woff'), url('../fonts/libhouse-icons.svg?lpzgnq#libhouse-icons') format('svg')
     font-weight: normal
     font-style: normal
     font-display: block
@@ -20,6 +20,104 @@
     font-size: 18px
     margin-top: -2px
     display: inline-block
+
+.lh-icon-toast-error .path1:before
+    content: "\e910"
+    color: #ffd93b
+
+.lh-icon-toast-error .path2:before
+    content: "\e911"
+    color: #f4c534
+    margin-left: -1em
+
+.lh-icon-toast-error .path3:before
+    content: "\e912"
+    color: #3e4347
+    margin-left: -1em
+
+.lh-icon-toast-error .path4:before
+    content: "\e913"
+    color: #3e4347
+    margin-left: -1em
+
+.lh-icon-toast-error .path5:before
+    content: "\e914"
+    color: #3e4347
+    margin-left: -1em
+
+.lh-icon-toast-error .path6:before
+    content: "\e915"
+    color: #e24b4b
+    margin-left: -1em
+
+.lh-icon-toast-error .path7:before
+    content: "\e916"
+    color: #f4c534
+    margin-left: -1em
+
+.lh-icon-toast-error .path8:before
+    content: "\e917"
+    color: #3e4347
+    margin-left: -1em
+
+.lh-icon-toast-error .path9:before
+    content: "\e918"
+    color: #f4c534
+    margin-left: -1em
+
+.lh-icon-toast-error .path10:before
+    content: "\e919"
+    color: #3e4347
+    margin-left: -1em
+
+.lh-icon-toast-error .path11:before
+    content: "\e91a"
+    color: #d03f3f
+    margin-left: -1em
+
+.lh-icon-toast-error .path12:before
+    content: "\e91b"
+    color: #fff
+    opacity: 0.2
+    margin-left: -1em
+
+.lh-icon-toast-success .path1:before
+    content: "\e91c"
+    color: #ffd93b
+
+.lh-icon-toast-success .path2:before
+    content: "\e91d"
+    color: #f4c534
+    margin-left: -1em
+
+.lh-icon-toast-success .path3:before
+    content: "\e91e"
+    color: #3e4347
+    margin-left: -1em
+
+.lh-icon-toast-success .path4:before
+    content: "\e91f"
+    color: #e9b02c
+    margin-left: -1em
+
+.lh-icon-toast-success .path5:before
+    content: "\e920"
+    color: #3e4347
+    margin-left: -1em
+
+.lh-icon-toast-success .path6:before
+    content: "\e921"
+    color: #e9b02c
+    margin-left: -1em
+
+.lh-icon-toast-success .path7:before
+    content: "\e922"
+    color: #3e4347
+    margin-left: -1em
+
+.lh-icon-danger:before
+    content: "\e90f"
+    color: #ea0000
 
 .lh-icon-cross:before
     content: "\e90e"
