--- a/public/sass/mixin.sass
+++ b/public/sass/mixin.sass
@@ -16,3 +16,8 @@
     background: -o-radial-gradient($param)
     background: -ms-radial-gradient($param)
     background: radial-gradient($param)
+
+@mixin box-shadow($param)
+    -webkit-box-shadow: $param
+    -moz-box-shadow: $param
+    box-shadow: $param
