--- a/public/sass/style.sass
+++ b/public/sass/style.sass
@@ -17,9 +17,13 @@
 
 @import "plugins/slick"
 
+// Cabinet
+@import "cabinet"
+
 // Entries
 @import "entries/cats"
 @import "entries/realty"
 
 // Components
 @import "components/toast"
+@import "components/alert"
