--- a/public/plugins/bootstrap/bootstrap-grid.css
+++ b/public/plugins/bootstrap/bootstrap-grid.css
@@ -757,167 +757,167 @@ html {
   .offset-xl-11 {
     margin-left: 91.6666666667%; } }
 .d-none {
-  display: none !important; }
+  display: none; }
 
 .d-inline {
-  display: inline !important; }
+  display: inline; }
 
 .d-inline-block {
-  display: inline-block !important; }
+  display: inline-block; }
 
 .d-block {
-  display: block !important; }
+  display: block; }
 
 .d-table {
-  display: table !important; }
+  display: table; }
 
 .d-table-row {
-  display: table-row !important; }
+  display: table-row; }
 
 .d-table-cell {
-  display: table-cell !important; }
+  display: table-cell; }
 
 .d-flex {
-  display: flex !important; }
+  display: flex; }
 
 .d-inline-flex {
-  display: inline-flex !important; }
+  display: inline-flex; }
 
 @media (min-width: 576px) {
   .d-sm-none {
-    display: none !important; }
+    display: none; }
 
   .d-sm-inline {
-    display: inline !important; }
+    display: inline; }
 
   .d-sm-inline-block {
-    display: inline-block !important; }
+    display: inline-block; }
 
   .d-sm-block {
-    display: block !important; }
+    display: block; }
 
   .d-sm-table {
-    display: table !important; }
+    display: table; }
 
   .d-sm-table-row {
-    display: table-row !important; }
+    display: table-row; }
 
   .d-sm-table-cell {
-    display: table-cell !important; }
+    display: table-cell; }
 
   .d-sm-flex {
-    display: flex !important; }
+    display: flex; }
 
   .d-sm-inline-flex {
-    display: inline-flex !important; } }
+    display: inline-flex; } }
 @media (min-width: 768px) {
   .d-md-none {
-    display: none !important; }
+    display: none; }
 
   .d-md-inline {
-    display: inline !important; }
+    display: inline; }
 
   .d-md-inline-block {
-    display: inline-block !important; }
+    display: inline-block; }
 
   .d-md-block {
-    display: block !important; }
+    display: block; }
 
   .d-md-table {
-    display: table !important; }
+    display: table; }
 
   .d-md-table-row {
-    display: table-row !important; }
+    display: table-row; }
 
   .d-md-table-cell {
-    display: table-cell !important; }
+    display: table-cell; }
 
   .d-md-flex {
-    display: flex !important; }
+    display: flex; }
 
   .d-md-inline-flex {
-    display: inline-flex !important; } }
+    display: inline-flex; } }
 @media (min-width: 992px) {
   .d-lg-none {
-    display: none !important; }
+    display: none; }
 
   .d-lg-inline {
-    display: inline !important; }
+    display: inline; }
 
   .d-lg-inline-block {
-    display: inline-block !important; }
+    display: inline-block; }
 
   .d-lg-block {
-    display: block !important; }
+    display: block; }
 
   .d-lg-table {
-    display: table !important; }
+    display: table; }
 
   .d-lg-table-row {
-    display: table-row !important; }
+    display: table-row; }
 
   .d-lg-table-cell {
-    display: table-cell !important; }
+    display: table-cell; }
 
   .d-lg-flex {
-    display: flex !important; }
+    display: flex; }
 
   .d-lg-inline-flex {
-    display: inline-flex !important; } }
+    display: inline-flex; } }
 @media (min-width: 1200px) {
   .d-xl-none {
-    display: none !important; }
+    display: none; }
 
   .d-xl-inline {
-    display: inline !important; }
+    display: inline; }
 
   .d-xl-inline-block {
-    display: inline-block !important; }
+    display: inline-block; }
 
   .d-xl-block {
-    display: block !important; }
+    display: block; }
 
   .d-xl-table {
-    display: table !important; }
+    display: table; }
 
   .d-xl-table-row {
-    display: table-row !important; }
+    display: table-row; }
 
   .d-xl-table-cell {
-    display: table-cell !important; }
+    display: table-cell; }
 
   .d-xl-flex {
-    display: flex !important; }
+    display: flex; }
 
   .d-xl-inline-flex {
-    display: inline-flex !important; } }
+    display: inline-flex; } }
 @media print {
   .d-print-none {
-    display: none !important; }
+    display: none; }
 
   .d-print-inline {
-    display: inline !important; }
+    display: inline; }
 
   .d-print-inline-block {
-    display: inline-block !important; }
+    display: inline-block; }
 
   .d-print-block {
-    display: block !important; }
+    display: block; }
 
   .d-print-table {
-    display: table !important; }
+    display: table; }
 
   .d-print-table-row {
-    display: table-row !important; }
+    display: table-row; }
 
   .d-print-table-cell {
-    display: table-cell !important; }
+    display: table-cell; }
 
   .d-print-flex {
-    display: flex !important; }
+    display: flex; }
 
   .d-print-inline-flex {
-    display: inline-flex !important; } }
+    display: inline-flex; } }
 .flex-row {
   flex-direction: row !important; }
 
