--- a/public/plugins/bootstrap/bootstrap.scss
+++ b/public/plugins/bootstrap/bootstrap.scss
@@ -21,7 +21,7 @@ html {
 @import "mixins";
 @import "root";
 //@import "reboot";
-//@import "type";
+@import "type";
 @import "images";
 @import "code";
 @import "grid";
