--- a/public/sass/core.sass
+++ b/public/sass/core.sass
@@ -8,6 +8,7 @@ body
   margin: 0 auto
   font-family: "AvenirNextCyr", sans-serif
   font-size: 15px
+  line-height: 20px
   color: $dark-navy-blue
 
 a
