--- a/public/sass/entries/realty.sass
+++ b/public/sass/entries/realty.sass
@@ -198,6 +198,9 @@ h1.realty-title
 .realty-breadcrumbs-wrap
     margin-top: 45px
 
+.realty-breadcrumbs-wrap-alt
+    margin: 45px 0 10px 0
+
 .realty-paginate-nav
     margin: 0
     padding: 0
