--- a/public/sass/form.sass
+++ b/public/sass/form.sass
@@ -235,6 +235,7 @@ label span
     color: $pinkish-grey
     font-size: 64px
     margin-bottom: 20px
+    line-height: 1
 
 .dropzone-wrap .dz-default.dz-message span
     width: 100%
