--- a/public/sass/style.css
+++ b/public/sass/style.css
@@ -219,6 +219,7 @@ body {
   margin: 0 auto;
   font-family: "AvenirNextCyr", sans-serif;
   font-size: 15px;
+  line-height: 20px;
   color: #000b28; }
 
 a {
@@ -647,7 +648,8 @@ label span {
   font-family: "libhouse-icons";
   color: #c4c4c4;
   font-size: 64px;
-  margin-bottom: 20px; }
+  margin-bottom: 20px;
+  line-height: 1; }
 
 .dropzone-wrap .dz-default.dz-message span {
   width: 100%;
@@ -1341,7 +1343,7 @@ div.cabinet-tab-list {
 div.cabinet-tab-wrap {
   padding: 0 30px; }
 
-.cabinet-wrap > div:not(:last-child) {
+.cabinet-wrap > div:not(:last-child), .cabinet-settings-wrap > div:not(:last-child) {
   border-right: 1px solid #f6f6f6; }
 
 .cabinet-tab-title {
@@ -1512,6 +1514,103 @@ ul.realty-btn-filters li:first-child {
 
 .compact-favorite .realty-favorite-btn {
   margin-bottom: 20px; }
+
+.cabinet-col-1 {
+  flex: 0 0 300px;
+  margin-right: 20px; }
+
+.cabinet-col-2 {
+  flex: 1; }
+
+.cabinet-left-wrap {
+  display: flex;
+  flex-wrap: wrap; }
+
+.cabinet-ava img {
+  width: 64px;
+  height: 64px;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%; }
+
+.cabinet-ava {
+  float: left;
+  padding-right: 30px; }
+
+.cabinet-name {
+  height: 64px;
+  display: flex;
+  align-items: center;
+  font-size: 22px;
+  font-weight: bold; }
+
+.cabinet-clear-col {
+  flex: 1 1 100%;
+  height: 50px; }
+
+.cabinet-info-col-1 {
+  flex: 0 0 48%;
+  max-width: 48%; }
+
+.cabinet-info-col-2 {
+  flex: 0 0 52%;
+  max-width: 52%; }
+
+.cabinet-info-col-1, .cabinet-info-col-2 {
+  padding: 0 14px; }
+
+.cabinet-user-info {
+  padding: 0 14px; }
+
+.cabinet-user-info > .row:first-child {
+  color: #a1a1a1;
+  margin-bottom: 10px; }
+
+.change-pass-btn {
+  height: 60px;
+  padding: 0 30px;
+  font-size: 15px;
+  font-weight: bold;
+  line-height: 58px;
+  color: #495aff;
+  position: relative;
+  border: 1px solid #f6f6f6;
+  cursor: pointer;
+  border-radius: 4px;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px; }
+
+.change-pass-btn > span {
+  border-bottom: 1px dotted #495aff; }
+
+.change-pass-btn i {
+  position: absolute;
+  right: 20px;
+  top: 26px;
+  font-size: 14px; }
+
+.cabinet-save-form {
+  margin-top: 23px; }
+
+.cabinet-dop-change > p {
+  color: #a1a1a1;
+  margin: 0 0 10px 0; }
+
+.cabinet-change-view > p {
+  margin: 0 0 10px 0; }
+
+.cabinet-change-link, .cabinet-edit-link {
+  color: #495aff;
+  cursor: pointer; }
+
+.cabinet-change-link:hover, .cabinet-edit-link:hover {
+  text-decoration: underline; }
+
+.cabinet-edit-link {
+  margin-top: 10px; }
+
+.cabinet-dop-change {
+  margin-bottom: 50px; }
 
 .realty-cats-list-content {
   margin: -6px 0 -8px 0; }
@@ -1744,6 +1843,9 @@ h1.realty-title {
 
 .realty-breadcrumbs-wrap {
   margin-top: 45px; }
+
+.realty-breadcrumbs-wrap-alt {
+  margin: 45px 0 10px 0; }
 
 .realty-paginate-nav {
   margin: 0;
